fix label and overflow

--- a/style.css
+++ b/style.css
@@ -328,6 +328,7 @@ main {
     }
     .slide-menu {
         overflow-x: hidden;
+        overflow-y: hidden;
         flex-wrap: wrap;
     }
     .slide-menu__button_style {
